<resources>
    <string name="app_name">Machine à cryptage</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="options">Options</string>
    <string name="cl_de_d_calage">Clé de décalage</string>
    <string name="quitter">Quitter</string>
    <string name="texte_recevoir">Texte à recevoir</string>
    <string name="texte_crypter">Entrez le texte à crypter ou décrypter</string>
    <string name="btn_crypter">CRYPTER</string>
    <string name="btn_decrypter">DECRYPTER</string>
    <string name="tv_cle">Entrez la clé de décalage entre 0 et 25</string>
    <string name="default_value">0</string>
    <string name="valider">Valider la clé</string>

</resources>