<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/mnu_ouvrir"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:icon="@android:drawable/ic_menu_upload"
    android:title="@string/open"
    app:showAsAction="always" />


    <item
        android:id="@+id/mnu_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnu_cle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/options"
        app:showAsAction="always" >
        <menu>

            <item android:id="@+id/action_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:title="@string/cl_de_d_calage" />

            <item android:id="@+id/action_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:title="@string/quitter" />

        </menu>
    </item>


</menu>